--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,56 @@ body {
   color: #8c8c8c;
   font-weight: 300;
   line-height: 1.6; }
+
+body::after {
+  position: fixed;
+  top: -150px;
+  right: -50px;
+  bottom: 0;
+  content: "";
+  width: 400px;
+  height: 600px;
+  border: 2px solid rgba(255, 255, 255, 0.05);
+  z-index: -1;
+  -webkit-transform: rotate(-30deg);
+  -moz-transform: rotate(-30deg);
+  -ms-transform: rotate(-30deg);
+  -o-transform: rotate(-30deg);
+  transform: rotate(-30deg); }
+
+body::before {
+  position: fixed;
+  top: 500px;
+  left: -100px;
+  bottom: 0;
+  content: "";
+  width: 400px;
+  height: 400px;
+  border: 2px solid rgba(255, 255, 255, 0.05);
+  z-index: -1;
+  -webkit-transform: rotate(20deg);
+  -moz-transform: rotate(20deg);
+  -ms-transform: rotate(20deg);
+  -o-transform: rotate(20deg);
+  transform: rotate(20deg); }
+
+.header {
+  background-color: aquamarine; }
+
+.hero-section {
+  background-color: orangered; }
+
+.about__picture {
+  background-color: crimson; }
+
+.about__content {
+  background-color: darkcyan; }
+
+.services {
+  background-color: forestgreen; }
+
+.portfolio {
+  background-color: deeppink; }
+
+.footer {
+  background-color: burlywood; }
