--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body::before {
 
 .container {
   display: grid;
-  grid-template-rows: 15vh 85vh;
+  grid-template-rows: 12rem calc(100vh - 12rem);
   grid-template-columns: [full-start] minmax(4rem, 1fr) [grid-col-start] repeat(12, [col-start] minmax(min-content, 9.5rem) [col-end]) [grid-col-end] minmax(4rem, 1fr) [full-end]; }
   .container > * {
     padding: 3rem;
