--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body::before {
 
 .container {
   display: grid;
-  grid-template-rows: 15vh 85vh;
+  grid-template-rows: 10rem calc(100vh - 10rem);
   grid-template-columns: [full-start] minmax(4rem, 1fr) [grid-col-start] repeat(12, [col-start] minmax(min-content, 9.5rem) [col-end]) [grid-col-end] minmax(4rem, 1fr) [full-end]; }
   .container > * {
     padding: 3rem;
@@ -59,7 +59,123 @@ body::before {
 .header {
   background-color: aquamarine;
   grid-column: grid-col-start / grid-col-end;
-  grid-row: 1 / 2; }
+  grid-row: 1 / 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .header__logo-box {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .header__navigation {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    align-items: center;
+    position: fixed;
+    top: 3rem;
+    right: 8.5vw; }
+    .header__navigation--button {
+      grid-row: 1 / -1;
+      grid-column: 1 / -1;
+      background-color: #fff;
+      z-index: 1000000;
+      box-shadow: 0 1rem 3rem rgba(18, 18, 18, 0.1); }
+    .header__navigation--background {
+      z-index: 5;
+      grid-row: 1 / -1;
+      grid-column: 1 / -1;
+      height: 1rem;
+      width: 1rem;
+      border-radius: 50%;
+      background-color: #121212;
+      box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+      transition: all 0.7s cubic-bezier(0.86, 0, 0.07, 1); }
+  .header__nav {
+    height: 100vh;
+    width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 222;
+    transition: all 0.8s; }
+    .header__nav::after {
+      position: fixed;
+      top: -150px;
+      right: -50px;
+      bottom: 0;
+      content: "";
+      width: 400px;
+      height: 600px;
+      border: 2px solid rgba(255, 255, 255, 0.05);
+      z-index: -1;
+      -webkit-transform: rotate(-30deg);
+      -moz-transform: rotate(-30deg);
+      -ms-transform: rotate(-30deg);
+      -o-transform: rotate(-30deg);
+      transform: rotate(-30deg); }
+    .header__nav::before {
+      position: fixed;
+      top: 500px;
+      left: -100px;
+      bottom: 0;
+      content: "";
+      width: 400px;
+      height: 400px;
+      border: 2px solid rgba(255, 255, 255, 0.05);
+      z-index: -1;
+      -webkit-transform: rotate(20deg);
+      -moz-transform: rotate(20deg);
+      -ms-transform: rotate(20deg);
+      -o-transform: rotate(20deg);
+      transform: rotate(20deg); }
+  .header__nav-list {
+    list-style: none;
+    text-align: center;
+    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition-delay: 0.2s;
+    transform: translateY(50rem);
+    opacity: 0; }
+  .header__nav-item {
+    margin: 2rem; }
+  .header__nav-link:link, .header__nav-link:visited {
+    font-size: 3rem;
+    font-weight: 300;
+    letter-spacing: 1rem;
+    display: inline-block;
+    padding: 1rem 2rem;
+    color: #8c8c8c;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #2f89fc 50%);
+    background-size: 250%;
+    transition: all 0.4s;
+    -moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden; }
+  .header__nav-link:hover, .header__nav-link:active {
+    background-position: 100%;
+    color: #121212;
+    transform: translateX(1rem); }
+
+.active-nav {
+  opacity: 1;
+  visibility: visible; }
+
+.active-bg {
+  transform: scale(900); }
+
+.active-nav-list {
+  transform: translateY(0);
+  opacity: 1; }
 
 .hero-section {
   background-color: orangered;
