--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -66,7 +66,7 @@ body::before {
 
 .container {
   display: grid;
-  grid-template-rows: 15vh 85vh;
+  grid-template-rows: 10rem calc(100vh - 10rem);
   grid-template-columns:
     [full-start]
     minmax(4rem, 1fr)
