--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
 
 body {
   font-family: "Poppins", Arial, sans-serif;
@@ -50,14 +51,13 @@ body::before {
 
 .container {
   display: grid;
-  grid-template-rows: 10rem calc(100vh - 10rem);
+  grid-template-rows: 12rem calc(100vh - 12rem);
   grid-template-columns: [full-start] minmax(4rem, 1fr) [grid-col-start] repeat(12, [col-start] minmax(min-content, 9.5rem) [col-end]) [grid-col-end] minmax(4rem, 1fr) [full-end]; }
   .container > * {
     padding: 3rem;
     font-size: 3rem; }
 
 .header {
-  background-color: aquamarine;
   grid-column: grid-col-start / grid-col-end;
   grid-row: 1 / 2;
   display: flex;
@@ -74,24 +74,44 @@ body::before {
     justify-items: center;
     align-items: center;
     position: fixed;
-    top: 3rem;
+    top: 1rem;
     right: 8.5vw; }
     .header__navigation--button {
       grid-row: 1 / -1;
       grid-column: 1 / -1;
-      background-color: #fff;
       z-index: 1000000;
-      box-shadow: 0 1rem 3rem rgba(18, 18, 18, 0.1); }
+      text-align: center;
+      cursor: pointer;
+      transition: all 0.2s; }
+    .header__navigation--button:hover .header__navigation--icon {
+      transform: translateY(-0.2rem) scale(1.05); }
     .header__navigation--background {
       z-index: 5;
       grid-row: 1 / -1;
       grid-column: 1 / -1;
-      height: 1rem;
-      width: 1rem;
+      height: 6.5rem;
+      width: 6.5rem;
       border-radius: 50%;
-      background-color: #121212;
-      box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+      background-color: rgba(18, 18, 18, 0.9);
+      box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.7);
       transition: all 0.7s cubic-bezier(0.86, 0, 0.07, 1); }
+    .header__navigation--icon {
+      position: relative;
+      margin-top: 5rem; }
+      .header__navigation--icon, .header__navigation--icon::before, .header__navigation--icon::after {
+        width: 4rem;
+        height: 2px;
+        background-color: #fff;
+        display: inline-block;
+        transition: all 0.2s; }
+      .header__navigation--icon::before, .header__navigation--icon::after {
+        position: absolute;
+        content: "";
+        left: 0; }
+      .header__navigation--icon::after {
+        top: 0.7rem; }
+      .header__navigation--icon::before {
+        top: -0.7rem; }
   .header__nav {
     height: 100vh;
     width: 100%;
@@ -171,11 +191,21 @@ body::before {
   visibility: visible; }
 
 .active-bg {
-  transform: scale(900); }
+  transform: scale(900);
+  background-color: #121212; }
 
 .active-nav-list {
   transform: translateY(0);
   opacity: 1; }
+
+.icon-toggle {
+  background-color: transparent; }
+  .icon-toggle::after {
+    top: 0;
+    transform: rotate(135deg); }
+  .icon-toggle::before {
+    top: 0;
+    transform: rotate(-135deg); }
 
 .hero-section {
   background-color: orangered;
