--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,58 @@ body::before {
 
 .container {
   display: grid;
-  grid-template-rows: 12rem calc(100vh - 12rem);
+  grid-template-rows: 10rem calc(100vh - 10rem);
   grid-template-columns: [full-start] minmax(4rem, 1fr) [grid-col-start] repeat(12, [col-start] minmax(min-content, 9.5rem) [col-end]) [grid-col-end] minmax(4rem, 1fr) [full-end]; }
   .container > * {
     padding: 3rem;
     font-size: 3rem; }
+
+.heading-1 {
+  font-size: 5.5rem;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 1rem;
+  margin-top: 0.7rem;
+  margin-bottom: 0.7rem; }
+
+.title-paragraph {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 2rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.3rem; }
+
+.cta,
+.cta:visited,
+.cta:link {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 1.6rem;
+  text-decoration: none;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.3rem;
+  display: inline-block;
+  padding: 1rem 2rem;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #2f89fc 50%);
+  background-size: 250%;
+  transition: all 0.4s;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; }
+  .cta span,
+  .cta:visited span,
+  .cta:link span {
+    text-decoration: underline; }
+
+.cta:hover,
+.cta:active {
+  background-position: 100%;
+  color: #121212;
+  transform: translateX(1rem); }
 
 .header {
   grid-column: grid-col-start / grid-col-end;
@@ -208,9 +255,12 @@ body::before {
     transform: rotate(-135deg); }
 
 .hero-section {
-  background-color: orangered;
   grid-column: grid-col-start / grid-col-end;
-  grid-row: 2 / 3; }
+  grid-row: 2 / 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
 
 .about__picture {
   background-color: crimson;
