--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,6 +1,7 @@
 // COLORS
 
 $bg-color: #121212;
+$dull-dark: rgba(255, 255, 255, 0.6);
 $color-primary: #8c8c8c;
 $color-secondary: #2f89fc;
 $color-light: #fff;
@@ -67,7 +68,7 @@ body::before {
 
 .container {
   display: grid;
-  grid-template-rows: 12rem calc(100vh - 12rem);
+  grid-template-rows: 10rem calc(100vh - 10rem);
   grid-template-columns:
     [full-start]
     minmax(4rem, 1fr)
