--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -15,7 +15,7 @@
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
-  letter-spacing: 0.3rem;
+  letter-spacing: 4px;
 }
 
 .cta,
