--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,7 +1,16 @@
 .about {
   &__picture {
-    background-color: crimson;
+    // background-color: crimson;
     grid-column: grid-col-start / col-end 5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &--img {
+      width: auto;
+      height: 100vh;
+      filter: grayscale(3);
+    }
   }
 
   &__content {
