--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,8 @@ body::before {
 
 .container {
   display: grid;
-  grid-template-rows: 10rem calc(100vh - 10rem);
+  grid-template-rows: 10rem calc(100vh - 10rem) min-content;
   grid-template-columns: [full-start] minmax(4rem, 1fr) [grid-col-start] repeat(12, [col-start] minmax(min-content, 9.5rem) [col-end]) [grid-col-end] minmax(4rem, 1fr) [full-end]; }
-  .container > * {
-    padding: 3rem;
-    font-size: 3rem; }
 
 .heading-1 {
   font-size: 5.5rem;
@@ -67,6 +64,22 @@ body::before {
   margin-top: 0.7rem;
   margin-bottom: 0.7rem; }
 
+.heading-2 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  color: #fff;
+  letter-spacing: 0.2rem; }
+
+.heading-3 {
+  font-size: 2.5rem;
+  color: #fff;
+  font-weight: 300; }
+
+.about__content--heading {
+  font-size: 13vw;
+  line-height: 0.3;
+  color: rgba(255, 255, 255, 0.08); }
+
 .title-paragraph {
   color: rgba(255, 255, 255, 0.6);
   font-size: 2rem;
@@ -74,6 +87,12 @@ body::before {
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 4px; }
+
+.detail-paragraph {
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-align: left;
+  letter-spacing: 1px; }
 
 .cta,
 .cta:visited,
@@ -104,12 +123,17 @@ body::before {
   color: #121212;
   transform: translateX(1rem); }
 
+.secondary-text {
+  color: #2f89fc;
+  font-weight: 400; }
+
 .header {
   grid-column: grid-col-start / grid-col-end;
   grid-row: 1 / 2;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  margin-top: 2rem; }
   .header__logo-box {
     display: flex;
     align-items: center;
@@ -121,7 +145,7 @@ body::before {
     justify-items: center;
     align-items: center;
     position: fixed;
-    top: 1rem;
+    top: 2rem;
     right: 8.5vw; }
     .header__navigation--button {
       grid-row: 1 / -1;
@@ -144,7 +168,7 @@ body::before {
       transition: all 0.7s cubic-bezier(0.86, 0, 0.07, 1); }
     .header__navigation--icon {
       position: relative;
-      margin-top: 5rem; }
+      margin-top: 1.7rem; }
       .header__navigation--icon, .header__navigation--icon::before, .header__navigation--icon::after {
         width: 4rem;
         height: 2px;
@@ -268,13 +292,59 @@ body::before {
   align-items: center;
   justify-content: center; }
   .about__picture--img {
+    display: block;
     width: auto;
-    height: 100vh;
-    filter: grayscale(3); }
+    height: 567px;
+    filter: grayscale(3);
+    z-index: -1; }
 
 .about__content {
-  background-color: darkcyan;
-  grid-column: col-start 6 / col-end 12; }
+  grid-column: col-start 6 / col-end 12;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  justify-content: center; }
+  .about__content--heading {
+    grid-column: 1 / -1;
+    grid-row: 1 / span 1;
+    justify-self: start;
+    align-self: start; }
+  .about__content--detail {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    justify-self: start;
+    align-self: start;
+    padding: 3rem 7rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, min-content);
+    grid-gap: 5rem; }
+  .about__content--social-icons {
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; }
+  .about__content--icon-item {
+    display: inline-block;
+    margin-right: 3rem; }
+  .about__content--link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.08); }
+    .about__content--link:hover .about__content--icon {
+      fill: #fff; }
+  .about__content--icon {
+    height: 2rem;
+    width: 2rem;
+    fill: #2f89fc;
+    transition: all 0.2s; }
+  .about__content--contact-detail {
+    margin-top: -3rem; }
 
 .services {
   background-color: forestgreen;
