--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,6 +13,11 @@
     justify-content: center;
   }
 
+  &__logo {
+    max-width: 250px;
+    height: auto;
+  }
+
   &__navigation {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
