--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,10 @@ body::before {
   letter-spacing: 0.2rem; }
 
 .heading-3 {
-  font-size: 2.5rem;
+  font-size: 2.1rem;
   color: #fff;
-  font-weight: 300; }
+  font-weight: 300;
+  letter-spacing: 0.2rem; }
 
 .about__content--heading {
   font-size: 13vw;
@@ -166,9 +167,8 @@ body::before {
       height: 6.5rem;
       width: 6.5rem;
       border-radius: 50%;
-      background-color: rgba(18, 18, 18, 0.9);
-      box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.7);
-      transition: all 0.7s cubic-bezier(0.86, 0, 0.07, 1); }
+      background-color: #121212;
+      transition: transform 0.9s cubic-bezier(0.86, 0, 0.07, 1); }
     .header__navigation--icon {
       position: relative;
       margin-top: 1.7rem; }
@@ -235,7 +235,7 @@ body::before {
     list-style: none;
     text-align: center;
     transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    transition-delay: 0.2s;
+    transition-delay: 0.3s;
     transform: translateY(50rem);
     opacity: 0; }
   .header__nav-item {
@@ -265,8 +265,7 @@ body::before {
   visibility: visible; }
 
 .active-bg {
-  transform: scale(900);
-  background-color: #121212; }
+  transform: scale(95); }
 
 .active-nav-list {
   transform: translateY(0);
@@ -330,7 +329,7 @@ body::before {
     align-items: center; }
   .about__content--icon-item {
     display: inline-block;
-    margin-right: 3rem; }
+    margin-right: 2rem; }
   .about__content--link {
     display: flex;
     align-items: center;
