--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -17,9 +17,10 @@
 }
 
 .heading-3 {
-  font-size: 2.5rem;
+  font-size: 2.1rem;
   color: $color-light;
   font-weight: 300;
+  letter-spacing: 0.2rem;
 }
 
 .about__content--heading {
