--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -23,9 +23,9 @@
   letter-spacing: 0.2rem;
 }
 
-.about__content--heading {
+.bold-heading {
   font-size: 13vw;
-  line-height: 0.3;
+  line-height: 0.4;
   color: $dull-dark-2;
 }
 
