--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -1,5 +1,28 @@
 .services {
-  background-color: forestgreen;
-
+  // background-color: forestgreen;
   grid-column: grid-col-start / grid-col-end;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 7rem;
+  margin-top: 26rem;
+
+  &__heading-1 {
+    font-size: 10vw;
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 2;
+  }
+
+  &__heading-2 {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
+    justify-self: end;
+    align-self: end;
+    line-height: 1;
+  }
+
+  &__cards {
+    grid-row: 2 / -1;
+    grid-column: 1 / -1;
+  }
 }
