--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -53,7 +53,7 @@
       width: 6.5rem;
       border-radius: 50%;
       background-color: $bg-color;
-      // box-shadow: 0 1rem 3rem rgba(black, 0.7);
+      box-shadow: 0 1rem 3rem rgba(black, 0.7);
       transition: transform 0.9s cubic-bezier(0.86, 0, 0.07, 1);
     }
 
