--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -26,6 +26,13 @@
   font-weight: 400;
 }
 
+.heading-5 {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: 300;
+}
+
 .bold-heading {
   font-size: 13vw;
   line-height: 0.4;
@@ -46,7 +53,7 @@
   font-size: 1.8rem;
   font-weight: 400;
   text-align: left;
-  letter-spacing: 1px;
+  letter-spacing: 0.3px;
 }
 
 .cta,
