--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -1,5 +1,90 @@
 .portfolio {
-  background-color: deeppink;
+  // background-color: deeppink;
 
   grid-column: grid-col-start / grid-col-end;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: min-content min-content;
+  grid-gap: 18rem;
+
+  &__heading-1 {
+    font-size: 9vw;
+    letter-spacing: 0rem;
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    text-align: center;
+  }
+
+  &__heading-2 {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    justify-self: center;
+    align-self: end;
+    line-height: 1;
+  }
+}
+
+.portfolio-blocks {
+  grid-row: 2 / -1;
+  grid-column: 1 / -1;
+  // background-color: aqua;
+  display: flex;
+  flex-direction: column;
+}
+
+.portfolio-block {
+  &:not(:last-child) {
+    margin-bottom: 8rem;
+  }
+
+  &:nth-child(even) {
+    flex-direction: row-reverse;
+  }
+
+  display: flex;
+
+  &__img-box {
+    width: 38%;
+    // background-color: brown;
+  }
+
+  &__img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  &__img-1 {
+    background-image: url(../img/xwork-1.jpg);
+  }
+
+  &__img-2 {
+    background-image: url(../img/xwork-2.jpg);
+  }
+
+  &__img-3 {
+    background-image: url(../img/xwork-3.jpg);
+  }
+
+  &__details-box {
+    width: 62%;
+    // background-color: blueviolet;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 10% 7%;
+
+    &__heading {
+      font-size: 3rem;
+      letter-spacing: 0;
+      font-weight: 400;
+      line-height: 1.4;
+      margin-bottom: 2.5rem;
+      margin-top: 0.8rem;
+    }
+  }
 }
