--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -56,11 +56,12 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    transition: all 0.3s;
+    transition: all 0.3s ease-in;
     backface-visibility: hidden;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
+      opacity: 0.4;
     }
   }
 
