--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,9 +3,11 @@
 @import "miscellaneous";
 
 @import "header";
+
 @import "hero";
 @import "about";
 @import "services";
 @import "portfolio";
+@import "contact";
 
 @import "footer";
