--- a/css/style.css
+++ b/css/style.css
@@ -370,16 +370,17 @@ body::before {
   grid-gap: 18rem;
   height: 100vh; }
   .services__heading-1 {
-    font-size: 9vw;
+    font-size: 10vw;
     letter-spacing: 0rem;
     grid-row: 1 / span 1;
-    grid-column: 1 / span 2; }
+    grid-column: 1 / span 3;
+    text-align: center; }
   .services__heading-2 {
     grid-row: 1 / span 1;
-    grid-column: 1 / span 1;
-    justify-self: end;
+    grid-column: 1 / span 3;
+    text-align: center;
     align-self: end;
-    line-height: 1; }
+    line-height: 0.5; }
   .services__cards {
     grid-row: 2 / -1;
     grid-column: 1 / -1;
@@ -412,7 +413,7 @@ body::before {
   grid-gap: 18rem;
   padding-top: 5rem; }
   .portfolio__heading-1 {
-    font-size: 9vw;
+    font-size: 10vw;
     letter-spacing: 0rem;
     grid-row: 1 / span 1;
     grid-column: 1 / span 3;
@@ -422,7 +423,7 @@ body::before {
     grid-column: 1 / span 3;
     justify-self: center;
     align-self: end;
-    line-height: 1; }
+    line-height: 0.5; }
 
 .portfolio-blocks {
   grid-row: 2 / -1;
@@ -507,8 +508,44 @@ body::before {
     height: 2.7rem; }
 
 .contact {
-  background-color: blueviolet;
-  grid-column: grid-col-start / grid-col-end; }
+  grid-column: grid-col-start / grid-col-end;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: min-content min-content;
+  grid-gap: 18rem; }
+  .contact__heading-1 {
+    font-size: 10vw;
+    letter-spacing: 0rem;
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    text-align: center; }
+  .contact__heading-2 {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    justify-self: center;
+    align-self: end;
+    line-height: 0.5; }
+  .contact__form-box {
+    grid-row: 2 / -1;
+    grid-column: 1 / -1;
+    display: grid;
+    row-gap: 3rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: min-content min-content; }
+  .contact__form-heading {
+    grid-column: 1 / -1;
+    text-align: center; }
+  .contact__form {
+    grid-column: 1 / span 1;
+    height: 80vh; }
+  .contact__img {
+    background-image: url(../img/xwork-3.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    grid-column: 2 / span 1;
+    display: block;
+    height: 80vh; }
 
 .footer {
   background-color: burlywood;
