--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,5 +1,51 @@
 .contact {
-  background-color: blueviolet;
-
   grid-column: grid-col-start / grid-col-end;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: min-content min-content;
+  grid-gap: 18rem;
+
+  &__heading-1 {
+    font-size: 10vw;
+    letter-spacing: 0rem;
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    text-align: center;
+  }
+
+  &__heading-2 {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    justify-self: center;
+    align-self: end;
+    line-height: 0.5;
+  }
+
+  &__form-box {
+    grid-row: 2 / -1;
+    grid-column: 1 / -1;
+    display: grid;
+    row-gap: 3rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: min-content min-content;
+  }
+
+  &__form-heading {
+    grid-column: 1 / -1;
+    text-align: center;
+  }
+
+  &__form {
+    grid-column: 1 / span 1;
+    height: 80vh;
+  }
+  &__img {
+    background-image: url(../img/xwork-3.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    grid-column: 2 / span 1;
+    display: block;
+    height: 80vh;
+  }
 }
