--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -8,18 +8,19 @@
   height: 100vh;
 
   &__heading-1 {
-    font-size: 9vw;
+    font-size: 10vw;
     letter-spacing: 0rem;
     grid-row: 1 / span 1;
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 3;
+    text-align: center;
   }
 
   &__heading-2 {
     grid-row: 1 / span 1;
-    grid-column: 1 / span 1;
-    justify-self: end;
+    grid-column: 1 / span 3;
+    text-align: center;
     align-self: end;
-    line-height: 1;
+    line-height: 0.5;
   }
 
   &__cards {
