--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -21,7 +21,8 @@
     grid-column: 1 / span 3;
     justify-self: center;
     align-self: end;
-    line-height: 0.5;
+    padding: 0.7rem 1.7rem;
+    display: block;
   }
 }
 
