--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -18,7 +18,8 @@
     grid-column: 1 / span 3;
     justify-self: center;
     align-self: end;
-    line-height: 0.5;
+    padding: 0.7rem 1.7rem;
+    display: block;
   }
 
   &__form-box {
