--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -19,8 +19,10 @@
     grid-row: 1 / span 1;
     grid-column: 1 / span 3;
     text-align: center;
+    justify-self: center;
     align-self: end;
-    line-height: 0.5;
+    padding: 0.7rem 1.7rem;
+    display: inline-block;
   }
 
   &__cards {
