--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -23,6 +23,8 @@
     align-self: end;
     padding: 0.7rem 1.7rem;
     display: inline-block;
+
+    backface-visibility: hidden;
   }
 
   &__cards {
