--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,8 @@ body::before {
     justify-self: center;
     align-self: end;
     padding: 0.7rem 1.7rem;
-    display: inline-block; }
+    display: inline-block;
+    backface-visibility: hidden; }
   .services__cards {
     grid-row: 2 / -1;
     grid-column: 1 / -1;
@@ -426,7 +427,8 @@ body::before {
     justify-self: center;
     align-self: end;
     padding: 0.7rem 1.7rem;
-    display: block; }
+    display: block;
+    backface-visibility: hidden; }
 
 .portfolio-blocks {
   grid-row: 2 / -1;
@@ -507,8 +509,8 @@ body::before {
   .portfolio-block__icon-item:not(:last-child) {
     margin-right: 1rem; }
   .portfolio-block--icon {
-    width: 2.7rem;
-    height: 2.7rem; }
+    width: 2.4rem;
+    height: 2.4rem; }
 
 .contact {
   grid-column: grid-col-start / grid-col-end;
@@ -528,28 +530,57 @@ body::before {
     justify-self: center;
     align-self: end;
     padding: 0.7rem 1.7rem;
-    display: block; }
+    display: block;
+    backface-visibility: hidden; }
   .contact__form-box {
     grid-row: 2 / -1;
     grid-column: 1 / -1;
-    display: grid;
     row-gap: 3rem;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: min-content min-content; }
-  .contact__form-heading {
-    grid-column: 1 / -1;
-    text-align: center; }
-  .contact__form {
-    grid-column: 1 / span 1;
-    height: 80vh; }
-  .contact__img {
-    background-image: url(../img/xwork-3.jpg);
+    background-image: linear-gradient(105deg, rgba(18, 18, 18, 0.9) 0%, rgba(18, 18, 18, 0.9) 55%, transparent 55%), url(../img/xwork-3.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    grid-column: 2 / span 1;
-    display: block;
-    height: 80vh; }
+    padding: 6rem; }
+  .contact__form-heading {
+    margin-bottom: 6rem; }
+
+.form__group {
+  width: 40%; }
+
+.form__group:not(:last-child) {
+  margin-bottom: 1rem; }
+
+.form__input {
+  font-size: 1.4rem;
+  padding: 1.5rem 0;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  border-radius: 1px;
+  color: #fff;
+  font-family: inherit;
+  font-weight: 300;
+  border-bottom: 1.7px solid rgba(255, 255, 255, 0.08);
+  display: block;
+  letter-spacing: 0.7px;
+  transition: all 0.5s; }
+  .form__input:focus {
+    outline: none;
+    border-color: #2f89fc; }
+  .form__input::placeholder {
+    color: rgba(255, 255, 255, 0.6); }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4.2rem); }
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-top: 0.7rem;
+  display: block;
+  transition: all 0.3s; }
 
 .footer {
   background-color: burlywood;
