--- a/css/style.css
+++ b/css/style.css
@@ -567,8 +567,16 @@ body::before {
   .form__input:focus {
     outline: none;
     border-color: #2f89fc; }
+  .form__input::-webkit-input-placeholder {
+    font-size: 1.4rem;
+    font-family: inherit;
+    color: rgba(255, 255, 255, 0.6);
+    font-weight: 300; }
   .form__input::placeholder {
-    color: rgba(255, 255, 255, 0.6); }
+    font-size: 1.4rem;
+    font-family: inherit;
+    color: rgba(255, 255, 255, 0.6);
+    font-weight: 300; }
 
 .form__input:placeholder-shown + .form__label {
   opacity: 0;
