--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -75,8 +75,18 @@
       border-color: $color-secondary;
     }
 
-    &::placeholder {
+    &::-webkit-input-placeholder {
+      font-size: 1.4rem;
+      font-family: inherit;
       color: $dull-dark;
+      font-weight: 300;
+    }
+
+    &::placeholder {
+      font-size: 1.4rem;
+      font-family: inherit;
+      color: $dull-dark;
+      font-weight: 300;
     }
   }
 
